syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/GolZrd/micro-chat/auth/pkg/user_v1;user_v1";

service UserAPI {
    rpc Create(CreateRequest) returns (CreateRespone);         // Create - ручка создания нового пользователя в системе. 
    rpc Get(GetRequest) returns (GetResponse);                 // Get - ручка получения информации о пользователе по его идентификатору. 
    rpc Update(UpdateRequest) returns (google.protobuf.Empty); // Update - ручка обновления информации о пользователе по его идентификатору
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty); // Delete - удаление пользователя из системы по его идентификатору. 
    rpc CheckUsersExists(CheckUsersExistsRequest) returns (CheckUsersExistsResponse); // CheckUsersExists - ручка проверки существования пользователей
    rpc SearchUser(SearchUserRequest) returns (SearchUserResponse); // SearchUser - ручка поиска пользователей по никнейму
}


enum Role {
    guest = 0;
    user = 1;
    admin = 2;
}

// Лучше разделять по методам, например, для создания пользователя передается пароль, но для других методов этот message UserInfo не нужен 
message UserInfo {
    string username = 1;
    string email = 2;
    string password = 3;
    string password_confirm = 4;
    Role role = 5;
}

message User {
    int64 id = 1;
    UserInfo info = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
}

message UserInfoShort {
    int64 id = 1;
    string username = 2;
}

message CreateRequest {
    UserInfo info = 1;
}

message CreateRespone {
    int64 id = 1;
}

message GetRequest {
    int64 id = 1;
}
// Такое возвращать небезопасно, только в учебных целях 
// Возвращать пароль нельзя
message GetResponse {
    User user = 1;
}

// Исправил порядок полей, теперь начинается с 1
message UpdateUserInfo {
    google.protobuf.StringValue username = 1;
    google.protobuf.StringValue email = 2;
}

message UpdateRequest {
    int64 id = 1;
    UpdateUserInfo info = 2;
}

message DeleteRequest {
    int64 id = 1;
}

message CheckUsersExistsRequest {
    repeated string usernames = 1;
}

message CheckUsersExistsResponse {
    repeated string notFoundUsers = 1; // Имена пользователей, которые не найдены
    repeated UserInfoShort foundUsers = 2; // Найденые пользователи с их Id
}

message UserSearchResult {
    int64 id = 1;
    string username = 2;
    string friendship_status = 3; // Статусы могут быть "none", "pending", "accepted" и т.д.
}

message SearchUserRequest {
    string query = 1; // Текст поиска
    int64 limit = 2;  // Лимит (например, 20)
}

// Ответ (список пользователей)
message SearchUserResponse {
    repeated UserSearchResult users = 1; // Список пользователей
}
